--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "webpack --mode production",
     "start": "webpack server --mode development",
     "eslint": "eslint --ext .jsx --ext .js ./src/",
-    "csslint": "stylelint './src/**/*.(js|jsx)'",
+    "csslint": "stylelint \"./src/**/*.(js|jsx)\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
